--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="title_activity_maps">MapsActivity</string>
     <string name="google_maps">Google Maps</string>
     <string name="minimal_password_8_character">Minimal password 8 character</string>
+    <string name="retry">Coba lagi</string>
 </resources>
